# NL_to_SQL_query

./: README.md  app.py  main.py  pyproject.toml  supabase_setup.sql
backend/: schema.py  state.py  workflow.py
backend/agents/: evaluator.py  generator.py  validator.py
config/: settings.py
